# CHEHAB_FHE_Compiler_RL

./: .gitignore  CMakeLists.txt  README.md  compiler_cpp_for_rl.cpp  kaggle_trae_notebook.ipynb  run_benchmarks.py  run_benchmarks_copy.py  run_polynomials_benchmarks.py
RL/: .gitignore
RL/chehab-vectorization-rl/: .gitignore  board_start.sh  embedding_hier2.py  embeddings_AETR_CLS.py  embeddings_hier1.py  expression_manager.py  expressions.txt  job.py  llm_data_generator.py  model.py  model6.py  requirements.txt  rules_8.txt  test_expressions.txt  vec_lang_expressions.txt  veclang_gen.py  vis.py
RL/chehab-vectorization-rl/egraphs/: Cargo.toml
RL/chehab-vectorization-rl/egraphs/src/: config.rs  cost.rs  extractor.rs  lib.rs  main.rs  rules.rs  runner.rs  veclang.rs
RL/chehab-vectorization-rl/pretraining/: embeddings_AETR.py  embeddings_AETR_CLS.py  embeddings_AETR_CLS_single.py  embeddings_RNN.py
RL/chehab-vectorization-rl/pytrs/: rules.py
RL/chehab-vectorization-rl/slurm_jobs_scripts/: env.sh  exec_embed.sh  exec_job.sh  gpu.sh
RL/fhe_rl/: TRAE.py  __main__.py  contrs_projection_head.py  embeddings_AETR_CLS.py  env.py  run.py  test.py  train.py  utils.py
RL/fhe_rl/datasets/: test.txt
RL/pytrs/: __init__.py  cost.py  parser.py  pattern.py  rules.py  serializer.py  util.py
RL/rl_venv/: pyvenv.cfg
RL/veclang_generator/: config.py  prompt.py
benchmarks/: global_variables.cpp
benchmarks/DAG/: CMakeLists.txt  DAG.cpp  run_dag.sh
benchmarks/DAG/he/: CMakeLists.txt
benchmarks/FIR/: CMakeLists.txt  FIR.cpp  generate_FIR.py
benchmarks/IIR/: IIR.cpp
benchmarks/box_blur/: box_blur.cpp
benchmarks/demo1/: CMakeLists.txt  demo1.cpp  fhe_io_example.txt
benchmarks/demo2/: CMakeLists.txt  demo2.cpp  fhe_io_example.txt
benchmarks/dot_product/: dot_product.cpp
benchmarks/full_adder/: CMakeLists.txt  fhe_io_example.txt  full_adder.cpp
benchmarks/full_adder/he/: CMakeLists.txt
benchmarks/gx_kernel/: gx_kernel.cpp
benchmarks/gy_kernel/: gy_kernel.cpp
benchmarks/hamming_dist/: fhe_io_example.txt  hamming_dist.cpp
benchmarks/l2_distance/: fhe_io_example.txt  generate_l2_distance.py  l2_distance.cpp
benchmarks/lin_reg/: lin_reg.cpp
benchmarks/matrix_mul/: matrix_mul.cpp
benchmarks/max/: max.cpp
benchmarks/median_3/: fhe_io_example.txt
benchmarks/median_4/: CMakeLists.txt  median_4.cpp
benchmarks/median_4/he/: CMakeLists.txt
benchmarks/poly_reg/: generate_poly_reg.py  poly_reg.cpp
benchmarks/polynomials_coyote/: polynomials_coyote.cpp
benchmarks/polynomials_coyote/he/: CMakeLists.txt
benchmarks/roberts_cross/: roberts_cross.cpp
benchmarks/sobel/: sobel.cpp
benchmarks/sort/: sort.cpp
egraphs/: Cargo.toml
egraphs/src/: config.rs  extractor.rs  extractor_exhaustive.rs  extractor_sa.rs  lib.rs  lp_extract.rs  main.rs  rules.rs  rules_1.rs  rules_2.rs  runner.rs
egraphs_simplification/: Cargo.toml  common.py
egraphs_simplification/src/: config.rs  cost.rs  extractor.rs  fhe_rules.rs  fhelang.rs  lib.rs  main.rs  rules.rs
generate_statistics_graphs/: generate_graphs.ipynb
src/fheco/dsl/: CMakeLists.txt  compiler.cpp  compiler.hpp  compiler_simplification.cpp
tests/frontend_tests/: test5.cpp
